samples/_failures_safe/1761612786_7ea021_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7343de1.c: In function ‘main’:
./samples/SAFE/__tmp_b7343de1.c:149:13: error: expected declaration or statement at end of input
  149 |             volatile int dummy = j * j;
      |             ^~~~~~~~
./samples/SAFE/__tmp_b7343de1.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b7343de1.c:149:13: error: expected declaration or statement at end of input
